--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto"
       rel="stylesheet"
     />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -31,6 +31,12 @@
 
     <div class="container home">
       <section class="content-section">
+        <div class='fun-bus'>
+          <img src="img/fun-bus.jpg" alt="Fun Bus">
+          <h2>Welcome To Fun Bus!</h2>
+            <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+            <br>
+        </div>
         <div class="text-content">
           <h2>Let's Go!</h2>
           <p>
