--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
 
     <div class="container home">
       <section class="content-section">
-        <div class='fun-bus'>
-          <img src="img/fun-bus.jpg" alt="Fun Bus">
+          <div class="fun-img">
+            <img src="img/fun-bus.jpg" alt="Fun Bus" />
+          </div>
+          <div class="fun-bus">
           <h2>Welcome To Fun Bus!</h2>
-            <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
-            <br>
+          <p>
+            Traveling expedition modern, clean webdesign blogger clean website
+            theme website modern. Design pretty design, travelblogger adventure
+            WordPress wanderlust theme blogger website expedition theme
+            travelblogger. Adventure fun traveler pretty design website
+            expedition.
+          </p>
+          <br />
         </div>
         <div class="text-content">
           <h2>Let's Go!</h2>
