--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 
     <div class="container home">
       <section class="content-section">
-          <div class="fun-img">
-            <img src="img/fun-bus.jpg" alt="Fun Bus" />
-          </div>
-          <div class="fun-bus">
+        <div class='border'></div>
+        <div class="fun-img">
+          <img src="img/fun-bus.jpg" alt="Fun Bus" />
+        </div>
+        <div class="fun-bus">
           <h2>Welcome To Fun Bus!</h2>
           <p>
             Traveling expedition modern, clean webdesign blogger clean website
